--- a/Day03(Random Jokes).html
+++ b/Day03(Random Jokes).html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jokes</title>
+    <title>RandomJokes</title>
     <style>
       @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
       * {
